fix: address bugs pointed out in review Misaligned transfer handler for canning display in REI Remove empty can recipe viewer in REI and JEI Prevent food from being shown in the empty can slot for uses in REI Show canning recipes as uses of the empty can in JEI